--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <div class="container">
       <div class="calc">
+        <div class="title">
+          <h3>Calculator By Dib</h3>
+        </div>
         <input type="text" placeholder="0" id="result" />
         <button onclick="clearScreen()">AC</button>
         <button onclick="deleteLast()">DEL</button>
